<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ScrollView
            android:id="@+id/main_scrollview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/black"
            android:fillViewport="true"
            android:paddingRight="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/navigation_background"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/my_music"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/slide_menu_my_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sel_slide_menu_item"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/default_user_s_navivation" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/my_music"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_subscribe_more" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/online_music"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/slide_menu_online_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sel_slide_menu_item"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/navigation_playlist" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/online_music"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/other"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/slide_menu_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sel_slide_menu_item"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/navigation_handy_setting" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/setting"
                            android:textColor="@color/grey"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/slide_menu_setting_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.1dp"
                            android:layout_weight="1"
                            android:background="@drawable/line_h" />

                        <LinearLayout
                            android:id="@+id/slide_menu_setting_wifi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/sel_slide_menu_item"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingLeft="25dp"
                            android:paddingTop="10dp" >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:layout_weight="2"
                                android:gravity="center_vertical"
                                android:text="@string/wifi"
                                android:textColor="@color/grey"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/setting_wifi_toggle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingRight="10dp"
                                android:background="@null"
                                android:button="@drawable/sel_slide_toogle"
                                android:textOff=""
                                android:textOn="" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/slide_menu_setting_gesture"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/sel_slide_menu_item"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingLeft="25dp"
                            android:visibility="gone" >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="4"
                                android:gravity="center_vertical"
                                android:text="@string/gesture_setting"
                                android:textColor="@color/grey"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/setting_gesture_toggle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1"
                                android:background="@null"
                                android:button="@drawable/sel_slide_toogle"
                                android:textOff=""
                                android:textOn="" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@drawable/line_h" />

                <LinearLayout
                    android:id="@+id/slide_menu_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sel_slide_menu_item"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/about"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@drawable/line_h" />

                <LinearLayout
                    android:id="@+id/slide_menu_quit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sel_slide_menu_item"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/navigation_quit" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/quit"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <cn.edu.gdmec.s07150808.musicplayer.customview.MyHSV
        android:id="@+id/main_myHSV"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:fillViewport="true"
        android:padding="0dip"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/main_myHSV_linear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="0dip"
            android:orientation="horizontal"
            android:padding="0dip" >
        </LinearLayout>
    </cn.edu.gdmec.s07150808.musicplayer.customview.MyHSV>

</FrameLayout>